alpm-types/src/version/snapshots/base::invalid_pkgrel@case_1.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid package release
 | 
 | .1
 | ^ expected positive decimal integer
